tests/errors/lexing/empty_character_literal.c
// Empty character literal
void main()
{
	'';
}
